# crossword-generator

./: cd_generator.py  docker-compose.yaml
cw-frontend/: package-lock.json  package.json
cw_generator/: .gitignore  config.py  pyproject.toml  settings.toml
cw_generator/cw_generator/: app.py  cd_generator.py  cd_validator.py  custom_types.py  main.py  utils.py
cw_generator/cw_generator/custom_schedular/: schedule.py
cw_generator/cw_generator/cw_gen/: cw_base_class.py  cw_gen_with_tree.py  cw_gen_with_trie.py  cw_generator.py  generate.py  pre_validate_utils.py
cw_generator/cw_generator/db_service/: queries.py  schema.py
cw_generator/tests/: cd_generator_test.py
cw_generator_uv/: .gitignore  main.py  pyproject.toml  pyrightconfig.json
cw_generator_uv/cw_generator/: custom_types.py  utils.py
cw_generator_uv/cw_generator/config/: settings.py
cw_generator_uv/cw_generator/custom_schedular/: schedule.py
cw_generator_uv/cw_generator/cw_gen/: cw_base_class.py  cw_gen_with_tree.py  cw_generator.py  cw_validator.py  generate.py  pre_validate_utils.py
cw_generator_uv/cw_generator/db_service/: data_loader.py  init_db.py  queries.py  schema.py
cw_generator_uv/tests/: cd_generator_test.py
