[tool.poetry]
name = "cw-generator"
version = "0.1.0"
description = ""
authors = ["pb-96 <philip.byrne@faculty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
fastapi = "^0.115.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
