[tool.poetry]
name = "cw-generator"
version = "0.1.0"
description = ""
authors = ["pb-96 <philip.byrne@faculty.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
fastapi = "^0.115.7"
fastapi-utilities = "^0.3.0"
black = "^25.1.0"
sqlalchemy = "^2.0.38"
dynaconf = "^3.2.10"
pydantic = "^2.10.6"
psycopg2 = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
