[project]
name = "cw-generator-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-sqlalchemy>=0.2.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.408",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
]
